apps/edge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudflared
spec:
  type: ClusterIP
  selector:
    app: cloudflared
  ports:
    - port: 80
      targetPort: metrics-port
