apps/edge/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cloudflared
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8000
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
    - to:
        # cloudflare tunnel
        - ipBlock: { cidr: 198.41.192.167/32 }
        - ipBlock: { cidr: 198.41.192.67/32 }
        - ipBlock: { cidr: 198.41.192.57/32 }
        - ipBlock: { cidr: 198.41.192.107/32 }
        - ipBlock: { cidr: 198.41.192.27/32 }
        - ipBlock: { cidr: 198.41.192.7/32 }
        - ipBlock: { cidr: 198.41.192.227/32 }
        - ipBlock: { cidr: 198.41.192.47/32 }
        - ipBlock: { cidr: 198.41.192.37/32 }
        - ipBlock: { cidr: 198.41.192.77/32 }
        - ipBlock: { cidr: 198.41.200.13/32 }
        - ipBlock: { cidr: 198.41.200.193/32 }
        - ipBlock: { cidr: 198.41.200.33/32 }
        - ipBlock: { cidr: 198.41.200.233/32 }
        - ipBlock: { cidr: 198.41.200.53/32 }
        - ipBlock: { cidr: 198.41.200.63/32 }
        - ipBlock: { cidr: 198.41.200.113/32 }
        - ipBlock: { cidr: 198.41.200.73/32 }
        - ipBlock: { cidr: 198.41.200.43/32 }
        - ipBlock: { cidr: 198.41.200.23/32 }
      ports:
        - protocol: TCP
          port: 7844
